updated to the most recent version.
git-svn-id: https://svn.php.net/repository/phpdoc/es/trunk@318115 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/functions.xml
+++ b/language/functions.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
 <!-- EN-Revision: d764b87c4fbc0a7d454df011c542dd8549f25f34 Maintainer: seros Status: ready -->
+<!-- Reviewed: no -->
+
 <chapter xml:id="language.functions" xmlns="http://docbook.org/ns/docbook">
  <title>Funciones</title>
  
@@ -188,7 +190,7 @@ function recursividad($a)
     <programlisting role="php">
 <![CDATA[
 <?php
-function tomar_matriz($entrada)
+function tomar_array($entrada)
 {
     echo "$entrada[0] + $entrada[1] = ".$entrada[0]+$entrada[1];
 }
@@ -208,7 +210,7 @@ function tomar_matriz($entrada)
     argumentos, éstos deben pasarse por referencia.
    </simpara>
    <para>
-    Para hacer que un argumento a una función sea siempre pasado por refernecia hay que poner
+    Para hacer que un argumento a una función sea siempre pasado por referencia hay que poner
     delante del nombre del argumento el signo 'ampersand' (&amp;) en la definición de la función:
    </para>
    <para>
