--- a/language/oop5/paamayim-nekudotayim.xml
+++ b/language/oop5/paamayim-nekudotayim.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: 96c9d88bad9a7d7d44bfb7f26c226df7ee9ddf26 Maintainer: x1v4nx Status: ready -->
+<!-- EN-Revision: bc318ee83f58def8a7254db161cafb399352ff1d Maintainer: andresdzphp Status: ready -->
 <!-- Reviewed: no -->
 
  <sect1 xml:id="language.oop5.paamayim-nekudotayim" xmlns="http://docbook.org/ns/docbook">
@@ -51,8 +51,9 @@ echo MyClass::CONST_VALUE;
   </example>
 
   <para>
-   Las palabras claves especiales <varname>self</varname> y <varname>parent</varname> son
-   utilizadas para acceder a propiedades y métodos desde el interior de la definición de la clase.
+   Las tres palabras claves especiales <varname>self</varname>, <varname>parent</varname> y 
+   <varname>static</varname> son utilizadas para acceder a propiedades y métodos desde el interior 
+   de la definición de la clase.
   </para>
 
   <example>
