--- a/language/oop5.xml
+++ b/language/oop5.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
 <!-- EN-Revision: c8a12f2b59f6f64d7c8bd40904afcc97a7d908c7 Maintainer: jorgeolaya Status: ready -->
+<!-- Reviewed: yes -->
 
 <chapter xml:id="language.oop5" xmlns="http://docbook.org/ns/docbook">
  <title>Clases y Objetos</title>
@@ -8,7 +9,7 @@
   <title>Introducción</title>
   <para>
    A partir de PHP 5, el modelo de objetos ha sido reescrito para permitir un mejor 
-   rendimiento  y más características. Este fue un cambio importante a partir de PHP 4. 
+   rendimiento  y con más características. Este fue un cambio importante a partir de PHP 4. 
    PHP 5 tiene un modelo de objetos completo.
    </para>
    <para>
