Updated to the most recent version
git-svn-id: https://svn.php.net/repository/phpdoc/es/trunk@318165 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/types/integer.xml
+++ b/language/types/integer.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: a92b44ef99a5e2c396aeb1dd60f4baba0519cb5d Maintainer: gerardocdc Status: ready -->
+<!-- EN-Revision: 89ea22350eb88742ffdeabc2b45a43dcb16b5bc2 Maintainer: gerardocdc Status: ready -->
 <sect1 xml:id="language.types.integer">
  <title>Enteros</title>
  
@@ -36,13 +36,18 @@
   
   <simpara>
    Los <type>integer</type> pueden ser especificados mediante notación decimal
-   (base 10), hexadecimal (base 16), u octal (base 8), opcionalmente precedidos
+   (base 10), hexadecimal (base 16), octal (base 8) o binaria (base 2), opcionalmente precedidos
    por un signo (- o +).
   </simpara>
   
   <para>
+   Los literales <type>integer</type> binarios están disponibles desde PHP 5.4.0.
+  </para>
+  
+  <para>
    Para usar la notación octal, se antepone al número un <literal>0</literal> (cero).
    Para usar la notación hexadecimal, se antepone al número un <literal>0x</literal>.
+   Para usar la notación binaria, se antepone al número un <literal>0b</literal>.
   </para>
   
   <example>
@@ -73,9 +78,12 @@ hexadecimal : 0[xX][0-9a-fA-F]+
 
 octal       : 0[0-7]+
 
+binario     : 0b[01]+
+
 entero      : [+-]?decimal
             | [+-]?hexadecimal
             | [+-]?octal
+            | [+-]?binary
 ]]>
    </programlisting>
   </informalexample>
