updated to the most recent version.
git-svn-id: https://svn.php.net/repository/phpdoc/es/trunk@318166 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/oop5/abstract.xml
+++ b/language/oop5/abstract.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
 <!-- EN-Revision: f0550025342228d4a7e6caa0edd2ec9d6ff63a00 Maintainer: andresdzphp Status: ready -->
-<!-- Reviewed: no -->
+<!-- Reviewed: yes -->
 
 
  <sect1 xml:id="language.oop5.abstract" xmlns="http://docbook.org/ns/docbook">
@@ -10,7 +10,7 @@
   <para>
    PHP 5 introduce clases y métodos abstractos. Las clases definidas como
    abstract seguramente no son instanciadas y cualquier clase
-   que contiene almenos un método abstracto deben ser definidas como abstract. Los métodos
+   que contiene almenos un método abstracto debe ser definida como abstract. Los métodos
    definidos como abstractos simplemente declaran la estructura del método, pero no pueden
    definir la implementación.
   </para>
