--- a/language/namespaces.xml
+++ b/language/namespaces.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: 920be7b3ce2588d1ab62d8ac7c6abb501dbc97b8 Maintainer: agarzon Status: ready -->
+<!-- EN-Revision: 77e57fc9c7f3d98f082b4533e24f26072e3a094d Maintainer: andresdzphp Status: ready -->
+<!-- Reviewed: no -->
+
 <chapter xml:id="language.namespaces" xmlns="http://docbook.org/ns/docbook"
 version="1.1">
  <title>Espacios de Nombres</title>
@@ -35,7 +37,7 @@ version="1.1">
     </listitem>
     <listitem>
      <simpara>
-      La capacidad de apodar (o abreviar) Nombres_Extra_Largos diseñada para paliar el primer problema,
+      La capacidad de apodar (o abreviar) Nombres_Extra_Largos diseñado para aliviar el problema en primer lugar,
       mejorando la legibilidad del código fuente.
      </simpara>
     </listitem>
@@ -70,6 +72,13 @@ echo constant($d); // véase la sección "Espacios de Nombres y características
     ]]>
    </programlisting>
   </example>
+    <note>
+   <para>
+    Los nombres de espacio de nombres <literal>PHP</literal> y <literal>php</literal>, y los nombres compuestos 
+    a partir de estos nombres (como <literal>PHP\Classes</literal>) están reservados para el uso del lenguaje interno 
+    y no deben ser utilizados en el código. 
+   </para>
+  </note>
  </sect1>
  
  <sect1 xml:id="language.namespaces.definition">
@@ -124,7 +133,7 @@ namespace MiProyecto; // error fatal - el espacio de nombres debe ser la primera
   <?phpdoc print-version-for="namespaces"?>
   <para>
    Al igual que los directorios y archivos, los espacios de nombres de PHP también tienen la capacidad
-   de especificar una jeraquía de nombres de espacios de nombres. Así, un nombre de un espacio de nombres
+   de especificar una jerarquía de nombres de espacios de nombres. Así, un nombre de un espacio de nombres
    se puede definir con subniveles:
    <example>
     <title>Declarar un único espacio de nombres con jerarquía</title>
