--- a/language/oop5/overloading.xml
+++ b/language/oop5/overloading.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
 <!-- EN-Revision: 606c44a528e1649ff4dcb5706a5e85935d9c36f6 Maintainer: chuso Status: ready -->
+<!-- Reviewed: no -->
+
  <sect1 xml:id="language.oop5.overloading" xmlns="http://docbook.org/ns/docbook">
   <title>Sobrecarga</title>
 
@@ -58,7 +60,7 @@
         <entry>5.3.0</entry>
         <entry>
          Se añade <function>__callStatic</function>.
-         Se añadieron avisos para la visibilidad pública e impedir la declaración de métodos estáticos.
+         Se añadieron advertencias para hacer cumplir la visibilidad public e impedir la declaración static.
         </entry>
        </row>
        <row>
@@ -75,7 +77,7 @@
 
 
   <sect2 xml:id="language.oop5.overloading.members">
-   <title>Sobrecarga de propieaddes</title>
+   <title>Sobrecarga de propiedades</title>
 
    <methodsynopsis>
     <type>void</type><methodname>__set</methodname>
