updated to the most recent version.
git-svn-id: https://svn.php.net/repository/phpdoc/es/trunk@318179 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/types/string.xml
+++ b/language/types/string.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: 9fa2d6307cf18d533584eea85d204ddf3a383160 Maintainer: chuso Status: ready -->
+<!-- EN-Revision: fbb8a1962dbbc696581c8ae3f77abd3a549cd4d8 Maintainer: andresdzphp Status: ready -->
+<!-- Reviewed: no -->
+
 <sect1 xml:id="language.types.string">
  <title>Cadenas</title>
  
@@ -457,6 +459,7 @@ Esto debe mostrar una 'A' mayúscula: \x41]]>
      datos estáticos. Un ejemplo típico es la inicialización de
      propiedades o constantes en una clase:
     </para>
+   </note>
     
     <example>
      <title>Ejemplo de datos estáticos</title>
@@ -472,7 +475,6 @@ EOT;
 ]]>
      </programlisting>
     </example>
-   </note>
    
    <note>
     <para>
@@ -520,8 +522,9 @@ EOT;
 <?php
 $jugo = "manzana";
 
-echo "El tomó algo de jugo de $jugo.".PHP_EOL;
-echo "El tomó algo de jugo hecho de $jugos."; // Inválido. "s" es un caracter válido para un nombre de variable, pero la variable es $jugo.
+echo "El tomó algo de jugo de $jugo.".PHP_EOL; 
+// Inválido. "s" es un caracter válido para un nombre de variable, pero la variable es $jugo.
+echo "El tomó algo de jugo hecho de $jugos.";
 ?>
 ]]>
      </programlisting>
@@ -689,8 +692,10 @@ echo "{$foo->$baz[1]}\n";
      </programlisting>
      &example.outputs;
      <screen>
+<![CDATA[
 Soy bar.
 Soy bar.
+]]>
      </screen>
     </informalexample>
     
