updated to the most recent version + fixed typos
git-svn-id: https://svn.php.net/repository/phpdoc/es/trunk@318197 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/constants.xml
+++ b/language/constants.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: 563ae44518ca9b3891ad9b4123cad249f1598ab3 Maintainer: andresdzphp Status: ready -->
+<!-- EN-Revision: 48573a3b164e53168cbc2acff2c714811ec6387c Maintainer: andresdzphp Status: ready -->
+<!-- Reviewed: no -->
 
  <chapter xml:id="language.constants" xmlns="http://docbook.org/ns/docbook">
   <title>Constantes</title>
-
+ 
   <simpara>  
    Una constante es un identificador (nombre) para expresar un valor simple. Como
    el nombre sugiere, este valor no puede variar durante la ejecucción del script. (A excepción de las 
@@ -251,8 +252,20 @@ echo CONSTANT;
          devuelve el nombre de la clase donde fue declarada (sensible a mayúsculas).
          En PHP 4 su valor siempre es en minúsculas. El nombre de la clase incluye 
          el namespace declarado en (p.e.j. <literal>Foo\Bar</literal>).
+         Tenga en cuenta que a partir de PHP 5.4 __CLASS__ también funciona con traits. 
+         Cuando es usado en un método trait, __CLASS__ es el nombre de la clase del trait 
+         que está siendo utilizado.
         </entry>
        </row>
+        <row>
+        <entry><constant>__TRAIT__</constant></entry>
+        <entry>
+         El nombre de el trait. (Añadido en PHP 5.4.0) A partir de PHP 5.4 esta constante 
+         devuelve el trait que fué declarado (sensible a mayúsculas y minúsculas). El nombre de el trait incluye 
+         el namespace si alguno fué declarado en (p.e.j. <literal>Foo\Bar</literal>).
+        </entry>
+       </row>
+       
        <row>
         <entry><constant>__METHOD__</constant></entry>
         <entry>
