--- a/language/references.xml
+++ b/language/references.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
 <!-- EN-Revision: d7470c8afcc082dbd2e195ad54d5f9413fa0df20 Maintainer: yago Status: ready -->
+<!-- Reviewed: no -->
+
 <chapter xml:id="language.references" xmlns="http://docbook.org/ns/docbook">
  <title>Referencias Explicadas</title>
  
  <sect1 xml:id="language.references.whatare">
-  <title>Qué son las Referencias</title>
+  <title>¿Qué son las Referencias?</title>
   <simpara>
    Las Referencias en PHP son medios de acceder al mismo contenido de una variable
    mediante diferentes nombres. No son como los punteros de C; por ejemplo,
@@ -22,11 +24,11 @@
  </sect1>
  
  <sect1 xml:id="language.references.whatdo">
-  <title>Qué hacen las Referencias</title>
+  <title>¿Qué hacen las Referencias?</title>
   <para>
    Hay tres operaciones básicas que se realizan usando referencias:
    <link linkend="language.references.whatdo.assign">asignar por
-    referncia</link>, <link linkend="language.references.whatdo.pass">pasar por
+    referencia</link>, <link linkend="language.references.whatdo.pass">pasar por
    referencia</link>,
    y <link linkend="language.references.whatdo.return">devolver por
    referencia</link>. En esta sección se dará una introducción a estas
