--- a/language/predefined/variables/superglobals.xml
+++ b/language/predefined/variables/superglobals.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
 <!-- EN-Revision: af4410a7e15898c3dbe83d6ea38246745ed9c6fb Maintainer: gerardocdc Status: ready -->
+<!-- Reviewed: yes -->
 
 <phpdoc:varentry xmlns:phpdoc="http://php.net/ns/phpdoc" xml:id="language.variables.superglobals" xmlns="http://docbook.org/ns/docbook" xmlns:xlink="http://www.w3.org/1999/xlink" role="noversion">
  <refnamediv>
@@ -62,14 +63,14 @@
    <title>Disponibilidad de variables</title>
    <para>
     Por defecto, todas las superglobals están disponibles pero hay directivas que 
-    afectan a su disponibilidad. Para más información, refiérase a la documentacion de
+    afectan a su disponibilidad. Para más información, véase la documentacion de
     <link linkend="ini.variables-order">variables_order</link>.
    </para>
   </note>
   <note>
    <title>Tratando con register_globals</title>
    <para>
-    Si la directiva deprecada <link linkend="ini.register-globals">register_globals</link>
+    Si la directiva obsoleta <link linkend="ini.register-globals">register_globals</link>
     tiene el valor <literal>on</literal> entonces las variables están tambien 
     disponibles en el ámbito global del código. Por ejemplo,
     <varname>$_POST['foo']</varname> tambien existirá como <varname>$foo</varname>.
@@ -94,7 +95,7 @@
   <para>
    <simplelist>
     <member><link linkend="language.variables.scope">ámbito de las variables</link></member>
-    <member>La directiva <link linkend="ini.variables-order">variables_order</link></member>
+    <member><link linkend="ini.variables-order">La directiva variables_order</link></member>
     <member><link linkend="book.filter">La extensión filter</link></member>
    </simplelist>
   </para>
