--- a/language/wrappers/php.xml
+++ b/language/wrappers/php.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: 8b6d169424ff189bb563ef4c3f35f8adff3f42c5 Maintainer: chuso Status: ready -->
+<!-- EN-Revision: 987249f1aa880b8334e6e1a007d2217cbc81bfc7 Maintainer: seros Status: ready -->
 
 <refentry xml:id="wrappers.php" xmlns="http://docbook.org/ns/docbook" xmlns:xlink="http://www.w3.org/1999/xlink" role="noversion">
  <refnamediv>
   <refname>php://</refname>
   <refpurpose>Acceso a distintos flujos de E/S</refpurpose>
  </refnamediv>
-
+ 
  <refsect1 role="description">
   &reftitle.description;
   <para>
@@ -17,7 +17,7 @@
    para poder manipular otros recursos de ficheros según se lee o se escribe
    en ellos.
   </para>
-
+  
   <refsect2>
    <title>php://stdin, php://stdout y php://stderr</title>
    <simpara>
@@ -39,7 +39,7 @@
     sólo escritura.
    </simpara>
   </refsect2>
-
+  
   <refsect2>
    <title>php://input</title>
    <simpara>
@@ -65,7 +65,7 @@
     </simpara>
    </note>
   </refsect2>  
-
+  
   <refsect2>
    <title>php://output</title>
    <para>
@@ -78,9 +78,9 @@
   <refsect2>
    <title>php://fd</title>
    <simpara>
-   <filename>php://fd</filename> permite el acceso directo al descriptor de archivo
-   dado. Por ejemplo, <filename>php://fd/3</filename> refiere al descriptor
-   de archivo 3.
+    <filename>php://fd</filename> permite el acceso directo al descriptor de archivo
+    dado. Por ejemplo, <filename>php://fd/3</filename> refiere al descriptor
+    de archivo 3.
    </simpara>
   </refsect2>
   
@@ -92,7 +92,9 @@
     fichero. La única diferencia entre las dos es que
     <filename>php://memory</filename> siempre almacenará sus datos en memoria,
     mientras que <filename>php://temp</filename> utilizará un fichero temporal cuando
-    la cantidad de datos almacenados superen el límite predefinido (por omisión, 2 MB).
+    la cantidad de datos almacenados superen el límite predefinido (por omisión, 2 MB). La
+    ubicación de este fichero temporal está determinada de la misma manera que la
+    función<function>sys_get_temp_dir</function>,
    </simpara>
    <simpara>
     El límite de memoria de <filename>php://temp</filename> se puede controlar añadiendo
@@ -172,7 +174,7 @@
    </para>
   </refsect2>
  </refsect1>
-
+ 
  <refsect1 role="options"><!-- {{{ -->
   &reftitle.options;
   <para>
@@ -316,7 +318,7 @@
    </informaltable>
   </para>
  </refsect1><!-- }}} -->
-
+ 
  <refsect1 role="examples"><!-- {{{ -->
   &reftitle.examples;
   <example><!-- {{{ -->
@@ -344,9 +346,9 @@ echo stream_get_contents($fp);
   <example><!-- {{{ -->
    <title>php://filter/resource=&lt;flujo a filtrar&gt;</title>
    <para>
-     Este parámetro tiene que ubicarse
-     al final de la especificación de <filename>php://filter</filename> y
-     tiene que apuntar al flujo que se desea filtrar.
+    Este parámetro tiene que ubicarse
+    al final de la especificación de <filename>php://filter</filename> y
+    tiene que apuntar al flujo que se desea filtrar.
    </para>
    <programlisting role="php">
 <![CDATA[
@@ -363,8 +365,8 @@ readfile("php://filter/resource=http://www.example.com");
   <example><!-- {{{ -->
    <title>php://filter/read=&lt;lista de filtros a aplicar a la cadena de lectura&gt;</title>
    <para>
-     Este parámetro contiene uno o más
-     nombres de filtros separados por el caracter <literal>|</literal>.
+    Este parámetro contiene uno o más
+    nombres de filtros separados por el caracter <literal>|</literal>.
    </para>
    <programlisting role="php">
 <![CDATA[
@@ -383,8 +385,8 @@ readfile("php://filter/read=string.toupper|string.rot13/resource=http://www.exam
   <example><!-- {{{ -->
    <title>php://filter/write=&lt;lista de filtros a aplicar a la cadena de escritura&gt;</title>
    <para>
-     Este parámetro contiene uno o más
-     nombres de filtros separados por el caracter <literal>|</literal>.
+    Este parámetro contiene uno o más
+    nombres de filtros separados por el caracter <literal>|</literal>.
    </para>
    <programlisting role="php">
 <![CDATA[
@@ -398,7 +400,7 @@ file_put_contents("php://filter/write=string.rot13/resource=example.txt","Hello 
    </programlisting>
   </example><!-- }}} -->
  </refsect1><!-- }}} -->
-
+ 
 </refentry>
 
 <!-- Keep this comment at the end of the file
