--- a/language/functions.xml
+++ b/language/functions.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: d764b87c4fbc0a7d454df011c542dd8549f25f34 Maintainer: seros Status: ready -->
+<!-- EN-Revision: efe3572ecace82fa3cfb08d27e2dc94842c83b95 Maintainer: andresdzphp Status: ready -->
 <!-- Reviewed: no -->
 
 <chapter xml:id="language.functions" xmlns="http://docbook.org/ns/docbook">
  <title>Funciones</title>
- 
+  
  <sect1 xml:id="functions.user-defined">
   <title>Funciones definidas por el usuario</title>
   
@@ -749,10 +749,8 @@ print $mi_carro->obtenerTotal(0.05) . "\n";
   </example>
   
   <simpara>
-   Las funciones anónimas están implementadas actualmente usando la
-   <link linkend="reserved.classes.closure">
-    clase <classname>Closure</classname></link>. Ésta es un detalle de
-   implementación y no se debe confiar en ella.
+    Las funciones anónimas son implementadas usando la clase <link linkend="class.closure">
+    <classname>Closure</classname></link>.
   </simpara>
   
   <note>
