--- a/language/predefined/variables/get.xml
+++ b/language/predefined/variables/get.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
 <!-- EN-Revision: cb0630b14901459c0bf1556e7d68f1b4c0d3796e Maintainer: yago Status: ready -->
+<!-- Reviewed: yes -->
 
 <phpdoc:varentry xmlns:phpdoc="http://php.net/ns/phpdoc" xml:id="reserved.variables.get" xmlns="http://docbook.org/ns/docbook" xmlns:xlink="http://www.w3.org/1999/xlink">
  <refnamediv>
   <refname>$_GET</refname>
-  <refname>$HTTP_GET_VARS [obsoleto]</refname>
+  <refname>$HTTP_GET_VARS [obsoleta]</refname>
   <refpurpose>Variables HTTP GET</refpurpose>
  </refnamediv>
  
@@ -59,17 +60,17 @@
     <programlisting role="php">
 <![CDATA[
 <?php
-echo 'Hello ' . htmlspecialchars($_GET["name"]) . '!';
+echo 'Hola ' . htmlspecialchars($_GET["nombre"]) . '!';
 ?>
 ]]>
     </programlisting>
     <simpara>
-     Asumiendo que el usuario introduzco http://example.com/?name=Hannes
+     Asumiendo que el usuario introduzco http://example.com/?nombre=Hannes
     </simpara>
     &example.outputs.similar;
     <screen>
 <![CDATA[
-Hello Hannes!
+Hola Hannes!
 ]]>
     </screen>
    </example>
@@ -91,7 +92,7 @@ Hello Hannes!
   <para>
    <simplelist>
     <member><link linkend="language.variables.external">Manejo de variables externas</link></member>
-    <member><link linkend="book.filter">La extensión filtro</link></member>
+    <member><link linkend="book.filter">La extensión filter</link></member>
    </simplelist>
   </para>
  </refsect1>
