--- a/language/predefined/variables/httprawpostdata.xml
+++ b/language/predefined/variables/httprawpostdata.xml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
 <!-- EN-Revision: cb0630b14901459c0bf1556e7d68f1b4c0d3796e Maintainer: yago Status: ready -->
+<!-- Reviewed: yes -->
 
 <phpdoc:varentry xmlns:phpdoc="http://php.net/ns/phpdoc" xml:id="reserved.variables.httprawpostdata" xmlns="http://docbook.org/ns/docbook" xmlns:xlink="http://www.w3.org/1999/xlink">
  <refnamediv>
   <refname>$HTTP_RAW_POST_DATA</refname>
-  <refpurpose>Datos del POST sin tratar</refpurpose>
+  <refpurpose>Datos POST sin tratar</refpurpose>
  </refnamediv>
  
  <refsect1 role="description">
   &reftitle.description;
   <para>
-   <varname>$HTTP_RAW_POST_DATA</varname> contiene los datos del POST sin tratar.
+   <varname>$HTTP_RAW_POST_DATA</varname> contiene los datos POST sin tratar.
    Ver <link linkend="ini.always-populate-raw-post-data">always_populate_raw_post_data</link>
   </para>
  </refsect1>
