--- a/language/predefined/variables/post.xml
+++ b/language/predefined/variables/post.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
 <!-- EN-Revision: cb0630b14901459c0bf1556e7d68f1b4c0d3796e Maintainer: yago Status: ready -->
+<!-- Reviewed: yes -->
 
 <phpdoc:varentry xmlns:phpdoc="http://php.net/ns/phpdoc" xml:id="reserved.variables.post" xmlns="http://docbook.org/ns/docbook" xmlns:xlink="http://www.w3.org/1999/xlink">
  <refnamediv>
   <refname>$_POST</refname>
-  <refname>$HTTP_POST_VARS [obsoleto]</refname>
+  <refname>$HTTP_POST_VARS [obsoleta]</refname>
   <refpurpose>Variables HTTP POST</refpurpose>
  </refnamediv>
  
@@ -42,7 +43,7 @@
        <entry>4.1.0</entry>
        <entry>
         Se introdujo <varname>$_POST</varname> y
-        <varname>$HTTP_POST_VARS</varname> quedó obsoleto.
+        <varname>$HTTP_POST_VARS</varname> quedó obsoleta.
        </entry>
       </row>
      </tbody>
@@ -64,7 +65,7 @@ echo 'Hola ' . htmlspecialchars($_POST["nombre"]) . '!';
 ]]>
     </programlisting>
     <simpara>
-     Asumiendo que el usuario POSTeó nombre=Juan
+     Asumiendo que el usuario envió por el método POST nombre=Juan
     </simpara>
     &example.outputs.similar;
     <screen>
@@ -86,7 +87,7 @@ Hola Juan!
   <para>
    <simplelist>
     <member><link linkend="language.variables.external">Tratando con variables externas</link></member>
-    <member><link linkend="book.filter">La extensión filtrado</link></member>
+    <member><link linkend="book.filter">La extensión filter</link></member>
    </simplelist>
   </para>
  </refsect1>
