--- a/language/predefined/variables/session.xml
+++ b/language/predefined/variables/session.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
 <!-- EN-Revision: cb0630b14901459c0bf1556e7d68f1b4c0d3796e Maintainer: yago Status: ready -->
+<!-- Reviewed: no -->
 
 <phpdoc:varentry xmlns:phpdoc="http://php.net/ns/phpdoc" xml:id="reserved.variables.session" xmlns="http://docbook.org/ns/docbook" xmlns:xlink="http://www.w3.org/1999/xlink">
  <refnamediv>
   <refname>$_SESSION</refname>
-  <refname>$HTTP_SESSION_VARS [deprecated]</refname>
+  <refname>$HTTP_SESSION_VARS [obsoleta]</refname>
   <refpurpose>Variables de sesión</refpurpose>
  </refnamediv>
  
@@ -41,7 +42,7 @@
        <entry>4.1.0</entry>
        <entry>
         Se introdujo <varname>$_SESSION</varname> y
-        <varname>$HTTP_SESSION_VARS</varname> quedó absoleto.
+        <varname>$HTTP_SESSION_VARS</varname> quedó absoleta.
        </entry>
       </row>
      </tbody>
