--- a/language/predefined/variables/phperrormsg.xml
+++ b/language/predefined/variables/phperrormsg.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
 <!-- EN-Revision: cb0630b14901459c0bf1556e7d68f1b4c0d3796e Maintainer: yago Status: ready -->
+<!-- Reviewed: yes -->
 
 <phpdoc:varentry xmlns:phpdoc="http://php.net/ns/phpdoc" xml:id="reserved.variables.phperrormsg" xmlns="http://docbook.org/ns/docbook" xmlns:xlink="http://www.w3.org/1999/xlink">
  <refnamediv>
@@ -20,8 +21,8 @@
   </para>
   <note>
    <simpara>
-    Esta variable solamente está disponible cuando <literal>track_errors</literal> está
-    activado en el <filename>php.ini</filename>.
+    Esta variable solamente está disponible cuando la directiva <literal>track_errors</literal> está
+    activada en el <filename>php.ini</filename>.
    </simpara>
   </note>
   <warning>
