--- a/language/predefined/variables/request.xml
+++ b/language/predefined/variables/request.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
 <!-- EN-Revision: cb0630b14901459c0bf1556e7d68f1b4c0d3796e Maintainer: yago Status: ready -->
+<!-- Reviewed: yes -->
 
 <phpdoc:varentry xmlns:phpdoc="http://php.net/ns/phpdoc" xml:id="reserved.variables.request" xmlns="http://docbook.org/ns/docbook" xmlns:xlink="http://www.w3.org/1999/xlink">
  <refnamediv>
@@ -87,7 +88,7 @@
   <simplelist>
    <member><function>import_request_variables</function></member>
    <member><link linkend="language.variables.external">Tratando con variables externas</link></member>
-   <member><link linkend="book.filter">La extensión filtrado</link></member>
+   <member><link linkend="book.filter">La extensión filter</link></member>
   </simplelist>
  </refsect1>
  
