--- a/language/predefined/arrayaccess.xml
+++ b/language/predefined/arrayaccess.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
 <!-- EN-Revision: 75ce87e32c56ee6b8e83a9623698066a76ef73fa Maintainer: jorgeolaya Status: ready -->
+<!-- Reviewed: no -->
+
 <phpdoc:classref xml:id="class.arrayaccess" xmlns:phpdoc="http://php.net/ns/phpdoc" xmlns="http://docbook.org/ns/docbook" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:xi="http://www.w3.org/2001/XInclude">
 
  <title>La interfaz ArrayAccess </title>
@@ -12,7 +14,7 @@
   <section xml:id="arrayaccess.intro">
    &reftitle.intro;
    <para>
-    Interfaz para proporcionar acceso a objetos como matrices. 
+    Interfaz para proporcionar acceso a objetos como arrays. 
    </para>
   </section>
 <!-- }}} -->
