--- a/language/predefined/arrayaccess/offsetexists.xml
+++ b/language/predefined/arrayaccess/offsetexists.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
 <!-- EN-Revision: 723d92067d654092beb92b53005e973066f25ee5 Maintainer: jorgeolaya Status: ready -->
+<!-- Reviewed: yes -->
+
 <refentry xml:id="arrayaccess.offsetexists" xmlns="http://docbook.org/ns/docbook" xmlns:xlink="http://www.w3.org/1999/xlink">
  <refnamediv>
   <refname>ArrayAccess::offsetExists</refname>
-  <refpurpose>Si existe un desplazamiento</refpurpose>
+  <refpurpose>Comprobar si existe o no un índice</refpurpose>
  </refnamediv>
 
  <refsect1 role="description">
@@ -14,16 +16,16 @@
    <methodparam><type>mixed</type><parameter>offset</parameter></methodparam>
   </methodsynopsis>
   <para>
-   O no existe un desplazamiento.
+   Comprueba si existe o no un índice.
   </para>
   <para>
-    Este método se ejecuta cuando se utiliza <function>isset</function> o
-   <function>empty</function> sobre los objetos de aplicación <classname>ArrayAccess</classname>.
+    Este método se ejecuta cuando se utilizan las funciones <function>isset</function> o
+   <function>empty</function> sobre los objetos <classname>ArrayAccess</classname>.
   </para>
   <note>
    <para>
     Cuando se utiliza <function>empty</function> <function>ArrayAccess::offsetGet</function> se
-    puede llamar y comprobar si está vacío sólo si<function>ArrayAccess::offsetExists</function>
+    puede llamar y comprobar si está vacío sólo si <function>ArrayAccess::offsetExists</function>
     devuelve &true;.
    </para>
   </note>
@@ -36,7 +38,7 @@
     <varlistentry><term><parameter>offset</parameter></term>
      <listitem>
       <para>
-       Una compensación para verificar
+       El índice a ser comprobado.
       </para>
      </listitem>
     </varlistentry>
@@ -52,7 +54,7 @@
   </para>
   <note>
    <para>
-     El valor de retorno se debe fundir a<type>boolean</type> si no booleanos fue devuelto. 
+     El valor de retorno se debe forzar a <type>boolean</type> si no devuelve un valor boleano. 
    </para> 
    </note>
  </refsect1>
@@ -61,7 +63,7 @@
   &reftitle.examples;
   <para>
    <example>
-    <title><function>ArrayAccess::offsetExists</function> ejemplo</title>
+    <title>Ejemplo de <function>ArrayAccess::offsetExists</function></title>
     <programlisting role="php">
 <![CDATA[
 <?php
