--- a/language/predefined/serializable/serialize.xml
+++ b/language/predefined/serializable/serialize.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
 <!-- EN-Revision: af4410a7e15898c3dbe83d6ea38246745ed9c6fb Maintainer: yago Status: ready -->
+<!-- Reviewed: yes -->
 
 <refentry xml:id="serializable.serialize" xmlns="http://docbook.org/ns/docbook" xmlns:xlink="http://www.w3.org/1999/xlink">
  <refnamediv>
   <refname>Serializable::serialize</refname>
-  <refpurpose>Representación en formato cadena de un objecto</refpurpose>
+  <refpurpose>Representación en formato cadena de un objeto</refpurpose>
  </refnamediv>
 
  <refsect1 role="description">
@@ -15,12 +16,12 @@
    <void />
   </methodsynopsis>
   <para>
-   Devuelve la representación de un objecto en formato cadena. 
+   Devuelve la representación de un objeto en formato string. 
   </para>
   <note>
    <para>
     Este método actúa como el 
-    <link linkend="language.oop5.decon.destructor">destructor</link> del objecto. El método
+    <link linkend="language.oop5.decon.destructor">destructor</link> del objeto. El método
     <function>__destruct</function> <emphasis>no</emphasis> será llamado después de usar este 
     método.
    </para>
@@ -36,14 +37,14 @@
  <refsect1 role="returnvalues">
   &reftitle.returnvalues;
   <para>
-   Devuelve la representación de un objecto o &null;
+   Devuelve la representación de un objeto o &null;
   </para>
  </refsect1>
 
  <refsect1 role="errors">
   &reftitle.errors;
   <para>
-   Lanza una <classname>Exception</classname> cuando de devuelen otros tipos de cadenas y
+   Lanza una <classname>Exception</classname> cuando de devuelen otros tipos de string y
    &null;
   </para>
  </refsect1>
