--- a/language/predefined/iteratoraggregate/getiterator.xml
+++ b/language/predefined/iteratoraggregate/getiterator.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
 <!-- EN-Revision: af4410a7e15898c3dbe83d6ea38246745ed9c6fb Maintainer: yago Status: ready --> 
+<!-- Reviewed: yes -->
 
 <refentry xml:id="iteratoraggregate.getiterator" xmlns="http://docbook.org/ns/docbook" xmlns:xlink="http://www.w3.org/1999/xlink">
  <refnamediv>
@@ -27,7 +28,7 @@
  <refsect1 role="returnvalues">
   &reftitle.returnvalues;
   <para>
-   Una instancia de un objeto que implementa<classname>Iterator</classname> o
+   Una instancia de un objeto que implementa <classname>Iterator</classname> o
    <classname>Traversable</classname>
   </para>
  </refsect1>
