--- a/language/predefined/serializable/unserialize.xml
+++ b/language/predefined/serializable/unserialize.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
 <!-- EN-Revision: af4410a7e15898c3dbe83d6ea38246745ed9c6fb Maintainer: yago Status: ready -->
+<!-- Reviewed: yes -->
 
 <refentry xml:id="serializable.unserialize" xmlns="http://docbook.org/ns/docbook" xmlns:xlink="http://www.w3.org/1999/xlink">
  <refnamediv>
   <refname>Serializable::unserialize</refname>
-  <refpurpose>Construye el objecto</refpurpose>
+  <refpurpose>Construye el objeto</refpurpose>
  </refnamediv>
 
  <refsect1 role="description">
@@ -20,7 +21,7 @@
   <note>
    <para>
     Este método actua como el
-    <link linkend="language.oop5.decon.constructor">constructor</link> del objecto. El método
+    <link linkend="language.oop5.decon.constructor">constructor</link> del objeto. El método
     <function>__construct</function> <emphasis>no</emphasis> será llamado después de este
     método.
    </para>
@@ -35,7 +36,7 @@
      <term><parameter>serialized</parameter></term>
      <listitem>
       <para>
-       La representación en formato cadena de un objeto.
+       La representación en formato string de un objeto.
       </para>
      </listitem>
     </varlistentry>
