--- a/language/context/parameters.xml
+++ b/language/context/parameters.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
 <!-- EN-Revision: 06c05635f102bfbe67d719ac8d52aaa4171bbf40 Maintainer: jorgeolaya Status: ready --> 
+<!-- Reviewed: yes -->
+
 <refentry xml:id="context.params" xmlns="http://docbook.org/ns/docbook" xmlns:xlink="http://www.w3.org/1999/xlink" role="noversion">
  <refnamediv>
   <refname>Contexto parámetros</refname>
@@ -9,8 +11,8 @@
  <refsect1 role="description">
   &reftitle.description;
   <para>
-   Estos <literal>parametros</literal> se puede establecer en un<literal>contexto</literal>
-   usando el <function>stream_context_set_params</function> funcion.
+   Estos <literal>parametros</literal> se puede establecer en un <literal>contexto</literal>
+   usando el la función <function>stream_context_set_params</function>.
   </para>
  </refsect1>
  <refsect1 role="options"><!-- {{{ -->
@@ -24,7 +26,7 @@
      </term>
      <listitem>
       <para>
-       Una <type>callback</type> que se llamará cuando se produce un evento en un secuencia.
+       Una <type>llamada de retorno</type> que se llamará cuando se produce un evento en una secuencia.
      </para>
       <para>
        Véase <function>stream_notification_callback</function> para más detalles.
