--- a/language/basic-syntax.xml
+++ b/language/basic-syntax.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
 <!-- EN-Revision: 89339f57c3fc5267022331b337e46d2dba198ae6 Maintainer: yago Status: ready -->
+<!-- Reviewed: no -->
 <chapter xml:id="language.basic-syntax" xmlns="http://docbook.org/ns/docbook">
  <title>Sintaxis básica</title>
  <sect1 xml:id="language.basic-syntax.phpmode">
@@ -127,7 +128,7 @@ if ($expression) {
    </note>
    <note>
     <para>
-     Desde PHP 5.4, la etiqueta abreviada de eco <literal>&lt;?=</literal> siempre es reconocida y
+     Desde PHP 5.4, la etiqueta abreviada de echo <literal>&lt;?=</literal> siempre es reconocida y
      válida, sin tener en cuenta la configuración de <link linkend="ini.short-open-tag">short_open_tag</link>.
     </para>
    </note>
