Updated to the most recent version
git-svn-id: https://svn.php.net/repository/phpdoc/es/trunk@318886 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/functions.xml
+++ b/language/functions.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: efe3572ecace82fa3cfb08d27e2dc94842c83b95 Maintainer: andresdzphp Status: ready -->
+<!-- EN-Revision: 547752940cda06624d44de01da7b89dc20237d5c Maintainer: andresdzphp Status: ready -->
 <!-- Reviewed: no -->
 
 <chapter xml:id="language.functions" xmlns="http://docbook.org/ns/docbook">
  <title>Funciones</title>
-  
+ 
  <sect1 xml:id="functions.user-defined">
   <title>Funciones definidas por el usuario</title>
   
@@ -108,7 +108,7 @@ function foo()
 foo();
 
 /* Ahora podemos llamar a bar(),
-   el procesamiento de foo()'
+   el procesamiento de foo()
    la ha hecho accesible. */
 
 bar();
@@ -749,8 +749,8 @@ print $mi_carro->obtenerTotal(0.05) . "\n";
   </example>
   
   <simpara>
-    Las funciones anónimas son implementadas usando la clase <link linkend="class.closure">
-    <classname>Closure</classname></link>.
+   Las funciones anónimas son implementadas usando la clase <link linkend="class.closure">
+   <classname>Closure</classname></link>.
   </simpara>
   
   <note>
