Updated to the most recent version
git-svn-id: https://svn.php.net/repository/phpdoc/es/trunk@318959 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/wrappers/php.xml
+++ b/language/wrappers/php.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: 987249f1aa880b8334e6e1a007d2217cbc81bfc7 Maintainer: seros Status: ready -->
+<!-- EN-Revision: b4210fc43895e667ffd62eef7b8fdc5c3d70413b Maintainer: seros Status: ready -->
+<!-- Reviewed: no -->
 
 <refentry xml:id="wrappers.php" xmlns="http://docbook.org/ns/docbook" xmlns:xlink="http://www.w3.org/1999/xlink" role="noversion">
  <refnamediv>
@@ -21,15 +22,14 @@
   <refsect2>
    <title>php://stdin, php://stdout y php://stderr</title>
    <simpara>
-    <filename>php://stdin</filename>, <filename>php://stdout</filename>
-    y <filename>php://stderr</filename> permiten acceder directamente al
-    flujo correspondiente de entrada o salida del proceso PHP. El flujo
-    hace referencia a un descriptor de fichero duplicado, de modo que si se abre
-    <filename>php://stdin</filename> y más tarde se cierra, sólo se cerraría
-    la copia del descriptor--el flujo real al que referencia
-    <constant>STDIN</constant> no se vería afectado. Tenga en cuenta que en
-    versiones de PHP anteriores a la 5.2.1, se presenta un comportamiento irregular.
-    Se recomienda utilizar las constantes <constant>STDIN</constant>,
+    <filename>php://stdin</filename>, <filename>php://stdout</filename> y
+    <filename>php://stderr</filename> permiten acceder directamente al correspondiente
+    flujo de entrada o salida del proceso PHP. El flujo hace referencia a un
+    descriptor de fichero duplicado, de modo que si se abre <filename>php://stdin</filename>
+    y más tarde se cierra, sólo se cerraría la copia del descriptor; el flujo
+    real al que referencia <constant>STDIN</constant> no se vería afectado. Tenga en cuenta que
+    PHP mostraba un comportamiento irregular en este aspcto hasta PHP 5.2.1. Se
+    recomienda utilizar simplemente las constantes <constant>STDIN</constant>,
     <constant>STDOUT</constant> y <constant>STDERR</constant> en lugar de
     abrir flujos manualmente usando estas envolturas.
    </simpara>
@@ -43,10 +43,10 @@
   <refsect2>
    <title>php://input</title>
    <simpara>
-    <filename>php://input</filename> permite leer datos a partir del cuerpo
-    solicitado. En el caso de peticiones POST, es preferible a
-    <varname>$HTTP_RAW_POST_DATA</varname> ya que no depende de diretivas
-    &php.ini; especiales. Sin embargo, cuando no se genera
+    <filename>php://input</filename> es un flujo de sólo lectura que permite
+    leer datos del cuerpo solicitado. En el caso de peticiones POST, es
+    preferible usar <filename>php://input</filename> en vez de <varname>$HTTP_RAW_POST_DATA</varname> ya que no depende de
+    diretivas &php.ini; especiales. Sin embargo, cuando no se genera
     automáticamente <varname>$HTTP_RAW_POST_DATA</varname>,
     se trata de una alternativa que hace un uso menos intensivo de memoria
     que activando <link linkend="ini.always-populate-raw-post-data">always_populate_raw_post_data</link>.
