Updated to the most recent version
git-svn-id: https://svn.php.net/repository/phpdoc/es/trunk@319053 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/control-structures/foreach.xml
+++ b/language/control-structures/foreach.xml
@@ -1,22 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: 17220cac83cafe46226d7bcf79b5e1fb4de6b1da Maintainer: jpberdejo Status: ready -->
+<!-- EN-Revision: a6f80675a7969282d55db8ab7edbfc5475b511d7 Maintainer: seros Status: ready -->
+<!-- Reviewed: no -->
 
 <sect1 xml:id="control-structures.foreach" xmlns="http://docbook.org/ns/docbook" xmlns:xlink="http://www.w3.org/1999/xlink">
  <title><literal>foreach</literal></title>
  <?phpdoc print-version-for="foreach"?>
  <para>
-  El constructor <literal>foreach</literal> simplemente da un modo fácil de
-  iterar sobre arrays. <literal>foreach</literal> funciona solo sobre arrays (y objetos) y
-  resultará en un error al intentar usarlo en una variable con un diferente
-  tipo de datos o una variable no inicializada. Hay dos sintaxis; la
-  segunda es una extensión menor, pero útil de la primera:
+  El constructor <literal>foreach</literal> simplemente ofrece un modo sencillo de
+  iterar sobre arrays. <literal>foreach</literal> funciona sólo sobre arrays (y objetos) y
+  emitirá un error al intentar usarlo con una variable de un tipo
+  diferente de datos o una variable no inicializada. Existen dos sintaxis; la
+  segunda es una extensión menor pero más útil que la primera:
   <informalexample>
    <programlisting>
 <![CDATA[
-foreach (array_expression as $value)
+foreach (expresión_array as $valor)
     sentencias
-foreach (array_expression as $key => $value)
+foreach (expresión_array as $clave => $valor)
     sentencias
 ]]>
    </programlisting>
@@ -24,15 +25,15 @@ foreach (array_expression as $key => $value)
  </para>
  <simpara>
   La primera forma recorre el array dado por
-  <literal>array_expression</literal>. En cada ciclo, el valor de
-  el elemento actual es asignado a <literal>$value</literal> y
-  el puntero interno del array es avanzado en uno (así en el próximo
-  ciclo se estará mirando el siguiente elemento).
+  <literal>expresión_array</literal>. En cada ciclo, el valor
+  del elemento actual se asigna a <literal>$valor</literal> y
+  el puntero interno del array avanza una posición (así en el próximo
+  ciclo se estará observando el siguiente elemento).
  </simpara>
  <simpara>
   La segunda manera hace lo mismo, excepto que la clave del elemento
   actual será asignada a la variable
-  <literal>$key</literal> en cada ciclo.
+  <literal>$clave</literal> en cada ciclo.
  </simpara>
  <simpara>
   A partir de PHP 5, también es posible
@@ -41,7 +42,7 @@ foreach (array_expression as $key => $value)
  <para>
   <note>
    <para>
-    Cuando <literal>foreach</literal> inicia la primera ejecución, el
+    Cuando <literal>foreach</literal> inicia su ejecución, el
     puntero interno del array se pone automáticamente en el primer elemento
     del array. Esto significa que no es necesario llamar la función 
     <function>reset</function> antes de un bucle 
@@ -52,43 +53,38 @@ foreach (array_expression as $key => $value)
  <para>
   <note>
    <para>
-    A menos que el array este <link linkend="language.references">referenciado</link>,
-    <literal>foreach</literal> opera sobre una copia del
-    array especificado y no sobre el propio array. <literal>foreach</literal>
-    tiene algunos efectos secundarios sobre el puntero del array. No se puede confiar en el puntero
-    del array durante o después del <literal>foreach</literal> sin reposicionarlo.
+    <literal>foreach</literal> opera sobre una copia de los valores del array a menos que
+    <literal>$valor</literal> sea <link linkend="language.references">referenciado</link>
+    anteponiéndole &amp;.  <literal>foreach</literal>
+    tiene algunos efectos secundarios sobre el puntero del array. No confíe en el puntero
+    del array durante o después de la ejecución de <literal>foreach</literal> sin reinicializarlo.
    </para>
   </note>
- </para>
- <para>
-  A partir de PHP 5, se pueden modificar fácilmente elementos del array al preceder
-  <literal>$value</literal> con &amp;. Esto asignará
-  una <link linkend="language.references">referencia</link> en lugar de copiar
-  el valor.
   <informalexample>
    <programlisting role="php">
 <![CDATA[
 <?php
-$arr = array(1, 2, 3, 4);
-foreach ($arr as &$value) {
-    $value = $value * 2;
+$array = array(1, 2, 3, 4);
+foreach ($array as &$valor) {
+    $valor = $valor * 2;
 }
-// $arr ahora es array(2, 4, 6, 8)
-unset($value); // rompe la referencia con el último elemento
+// $array ahora es array(2, 4, 6, 8)
+unset($valor); // rompe la referencia con el último elemento
 ?>
 ]]>
    </programlisting>
   </informalexample>
-  Esto sólo es posible si el array iterado puede ser referenciado (es decir, es una
-  variable), lo que significa que el código siguiente no funciona:
+ </para>
+ <para>
+  Referenciar <literal>$valor</literal> sólo es posible si el array iterado puede ser
+  referenciado (es decir, si es una variable). El siguiente código no funcionará:
   <informalexample>
    <programlisting role="php">
 <![CDATA[
 <?php
-foreach (array(1, 2, 3, 4) as &$value) {
-    $value = $value * 2;
+foreach (array(1, 2, 3, 4) as &$valor) {
+    $valor = $valor * 2;
 }
-
 ?>
 ]]>
    </programlisting>
@@ -96,7 +92,7 @@ foreach (array(1, 2, 3, 4) as &$value) {
  </para>
  <warning>
   <para>
-   Referencia del <literal>$value</literal> y el último elemento del array
+   La referencia del <literal>$valor</literal> y el último elemento del array
    permanecen aún después del bucle <literal>foreach</literal>. Se recomienda
    destruirlos con <function>unset</function>.
   </para>
@@ -110,38 +106,40 @@ foreach (array(1, 2, 3, 4) as &$value) {
   </note>
  </para>
  <para>
-  Puede haber notado que las siguientes son funcionalmente
+  Se puede haber notado que las siguientes construcciones son funcionalmente
   idénticas:
   <informalexample>
    <programlisting role="php">
 <![CDATA[
 <?php
-$arr = array("uno", "dos", "tres");
-reset($arr);
-while (list(, $value) = each($arr)) {
-    echo "Valor: $value<br />\n";
+$array = array("uno", "dos", "tres");
+reset($array);
+while (list(, $valor) = each($array)) {
+    echo "Valor: $valor<br />\n";
 }
 
-foreach ($arr as $value) {
-    echo "Valor: $value<br />\n";
+foreach ($array as $valor) {
+    echo "Valor: $valor<br />\n";
 }
 ?>
 ]]>
    </programlisting>
   </informalexample>
-  Las siguientes también son funcionalmente idénticas:
+ </para>
+ <para>
+  Las siguientes construcciones también son funcionalmente idénticas:
   <informalexample>
    <programlisting role="php">
 <![CDATA[
 <?php
-$arr = array("uno", "dos", "tres");
-reset($arr);
-while (list($key, $value) = each($arr)) {
-    echo "Clave: $key; Valor: $value<br />\n";
+$array = array("uno", "dos", "tres");
+reset($array);
+while (list($clave, $valor) = each($array)) {
+    echo "Clave: $clave; Valor: $valor<br />\n";
 }
 
-foreach ($arr as $key => $value) {
-    echo "Clave: $key; Valor: $value<br />\n";
+foreach ($array as $clave => $valor) {
+    echo "Clave: $clave; Valor: $valor<br />\n";
 }
 ?>
 ]]>
@@ -154,7 +152,7 @@ foreach ($arr as $key => $value) {
    <programlisting role="php">
 <![CDATA[
 <?php
-/* foreach ejemplo 1: sólo valor */
+/* Ejemplo 1 de foreach: sólo el valor */
 
 $a = array(1, 2, 3, 17);
 
@@ -162,7 +160,7 @@ foreach ($a as $v) {
     echo "Valor actual de \$a: $v.\n";
 }
 
-/* foreach ejemplo 2: valor (con su notación de acceso manual impreso con fines ilustrativos) */
+/* Ejemplo 2 de foreach: valor (con su notación de acceso manual impreso con fines ilustrativos) */
 
 $a = array(1, 2, 3, 17);
 
@@ -173,7 +171,7 @@ foreach ($a as $v) {
     $i++;
 }
 
-/* foreach ejemplo 3: clave y valor */
+/* Ejemplo 3 de foreach: clave y valor */
 
 $a = array(
     "uno" => 1,
@@ -186,7 +184,7 @@ foreach ($a as $k => $v) {
     echo "\$a[$k] => $v.\n";
 }
 
-/* foreach ejemplo 4: arrays multi-dimensionales */
+/* Ejemplo 4 de foreach: arrays multidimensionales */
 $a = array();
 $a[0][0] = "a";
 $a[0][1] = "b";
@@ -199,7 +197,7 @@ foreach ($a as $v1) {
     }
 }
 
-/* foreach ejemplo 5: arrays dinámicos */
+/* Ejemplo 5 de foreach: arrays dinámicos */
 
 foreach (array(1, 2, 3, 4, 5) as $v) {
     echo "$v\n";
