Updated to the most recent version
git-svn-id: https://svn.php.net/repository/phpdoc/es/trunk@319099 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/control-structures/foreach.xml
+++ b/language/control-structures/foreach.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: cc97f20f7c93bc0fe0ceee3470f7126a13446967 Maintainer: seros Status: ready -->
+<!-- EN-Revision: 64d777f39e3dcefcc3a65032221cf4863f9db663 Maintainer: seros Status: ready -->
 <!-- Reviewed: no -->
 
 <sect1 xml:id="control-structures.foreach" xmlns="http://docbook.org/ns/docbook" xmlns:xlink="http://www.w3.org/1999/xlink">
  <title><literal>foreach</literal></title>
  <?phpdoc print-version-for="foreach"?>
  <para>
-  El constructor <literal>foreach</literal> simplemente ofrece un modo sencillo de
-  iterar sobre arrays. <literal>foreach</literal> funciona sólo sobre arrays (y objetos) y
-  emitirá un error al intentar usarlo con una variable de un tipo
-  diferente de datos o una variable no inicializada. Existen dos sintaxis; la
-  segunda es una extensión menor pero más útil que la primera:
+  El constructor <literal>foreach</literal> proporcina un modo sencillo de
+  iterar sobre arrays. <literal>foreach</literal> funciona sólo sobre arrays
+  y objetos, y emitirá un error al intentar usarlo con una variable
+  de un tipo diferente de datos o una variable no inicializada. Existen dos
+  sintaxis:
   <informalexample>
    <programlisting>
 <![CDATA[
@@ -25,19 +25,18 @@ foreach (expresión_array as $clave => $valor)
  </para>
  <simpara>
   La primera forma recorre el array dado por
-  <literal>expresión_array</literal>. En cada ciclo, el valor
+  <literal>expresión_array</literal>. En cada iteración, el valor
   del elemento actual se asigna a <literal>$valor</literal> y
-  el puntero interno del array avanza una posición (así en el próximo
-  ciclo se estará observando el siguiente elemento).
+  el puntero interno del array avanza una posición (así en la próximo
+  iteración se estará observando el siguiente elemento).
  </simpara>
  <simpara>
-  La segunda manera hace lo mismo, excepto que la clave del elemento
-  actual será asignada a la variable
-  <literal>$clave</literal> en cada ciclo.
+  La segunda forma además asigna la clave del elemento actual a
+  la variable <literal>$clave</literal> en cada iteración.
  </simpara>
  <simpara>
-  A partir de PHP 5, también es posible
-  <link linkend="language.oop5.iterations">personalizar los objetos de la iteración</link>.
+  También es posible
+  <link linkend="language.oop5.iterations">personalizar la iteración de objetos</link>.
  </simpara>
  <para>
   <note>
@@ -48,18 +47,16 @@ foreach (expresión_array as $clave => $valor)
     <function>reset</function> antes de un bucle 
     <literal>foreach</literal>.
    </para>
+   <para>
+    Ya que <literal>foreach</literal> depende el puntero de array interno, cambiar éste
+    dentro del bucle puede conducir a un comportamiento inesperado.
+   </para>
   </note>
  </para>
  <para>
-  <note>
-   <para>
-    <literal>foreach</literal> opera sobre una copia de los valores del array a menos que
-    <literal>$valor</literal> sea <link linkend="language.references">referenciado</link>
-    anteponiéndole &amp;.  <literal>foreach</literal>
-    tiene algunos efectos secundarios sobre el puntero del array. No confíe en el puntero
-    del array durante o después de la ejecución de <literal>foreach</literal> sin reinicializarlo.
-   </para>
-  </note>
+  Para poder modificar directamente los elementos del array dentro de bucle, se ha de anteponer
+  &amp; a <literal>$valor</literal>. En este caso el valor será asignado por
+  <link linkend="language.references">referencia</link>.
   <informalexample>
    <programlisting role="php">
 <![CDATA[
