--- a/language/predefined/exception.xml
+++ b/language/predefined/exception.xml
@@ -1,42 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
 <!-- EN-Revision: bd8f71c1cbb0079fe2c1c3427846d7ba44a8bd02 Maintainer: jorgeolaya Status: ready -->
+<!-- Reviewed: yes -->
 
 <phpdoc:exceptionref xml:id="class.exception"
- xmlns="http://docbook.org/ns/docbook"
- xmlns:xlink="http://www.w3.org/1999/xlink"
- xmlns:xi="http://www.w3.org/2001/XInclude"
- xmlns:phpdoc="http://php.net/ns/phpdoc">
+xmlns="http://docbook.org/ns/docbook"
+xmlns:xlink="http://www.w3.org/1999/xlink"
+xmlns:xi="http://www.w3.org/2001/XInclude"
+xmlns:phpdoc="http://php.net/ns/phpdoc">
  <title>Exception</title>
  <titleabbrev>Exception</titleabbrev>
  
  <partintro>
- 
-<!-- {{{ Exception intro -->
+  
+  <!-- {{{ Exception intro -->
   <section xml:id="exception.intro">
    &reftitle.intro;
-      <para>
+   <para>
     <ooclass><classname>Exception</classname></ooclass> es la clase base para
     todas las excepciones.
    </para>
   </section>
-<!-- }}} -->
- 
+  <!-- }}} -->
+  
   <section xml:id="exception.synopsis">
    &reftitle.classsynopsis;
- 
-<!-- {{{ Synopsis -->
+   
+   <!-- {{{ Synopsis -->
    <classsynopsis>
     <ooclass><classname>Exception</classname></ooclass>
- 
-<!-- {{{ Class synopsis -->
+    
+    <!-- {{{ Class synopsis -->
     <classsynopsisinfo>
      <ooclass>
       <classname>Exception</classname>
      </ooclass>
     </classsynopsisinfo>
-<!-- }}} -->
- 
+    <!-- }}} -->
+    
     <classsynopsisinfo role="comment">&Properties;</classsynopsisinfo>
     <fieldsynopsis>
      <modifier>protected</modifier>
@@ -58,48 +59,48 @@
      <type>int</type>
      <varname linkend="exception.props.line">line</varname>
     </fieldsynopsis>
-
+    
     <classsynopsisinfo role="comment">&Methods;</classsynopsisinfo>
     <xi:include xpointer="xmlns(db=http://docbook.org/ns/docbook) xpointer(id('class.exception')/db:refentry/db:refsect1[@role='description']/descendant::db:constructorsynopsis[1])" />
     <xi:include xpointer="xmlns(db=http://docbook.org/ns/docbook) xpointer(id('class.exception')/db:refentry/db:refsect1[@role='description']/descendant::db:methodsynopsis[1])" />
    </classsynopsis>
- 
-<!-- }}} -->
- 
+   
+   <!-- }}} -->
+   
   </section>
- 
-<!-- {{{ Exception properties -->
+  
+  <!-- {{{ Exception properties -->
   <section xml:id="exception.props">
    &reftitle.properties;
    <variablelist>
     <varlistentry xml:id="exception.props.message">
      <term><varname>message</varname></term>
      <listitem>
-      <para>El mensaje de excepción</para>
+      <para>El mensaje de la excepción</para>
      </listitem>
     </varlistentry>
     <varlistentry xml:id="exception.props.code">
      <term><varname>code</varname></term>
      <listitem>
-      <para>El código de excepción</para>
+      <para>El código de la excepción</para>
      </listitem>
     </varlistentry>
     <varlistentry xml:id="exception.props.file">
      <term><varname>file</varname></term>
      <listitem>
-      <para>El nombre del archivo donde se creó la excepción</para>
+      <para>El nombre del fichero donde se originó la excepción</para>
      </listitem>
     </varlistentry>
     <varlistentry xml:id="exception.props.line">
      <term><varname>line</varname></term>
      <listitem>
-      <para>La línea fue lanzada en la excepción</para>
+      <para>La línea donde se originó la excepción</para>
      </listitem>
     </varlistentry>
    </variablelist>
   </section>
-<!-- }}} -->
- 
+  <!-- }}} -->
+  
  </partintro>
  
  &language.predefined.exception.construct;
@@ -114,7 +115,7 @@
  &language.predefined.exception.clone;
  
 </phpdoc:exceptionref>
- 
+
 <!-- Keep this comment at the end of the file
 Local variables:
 mode: sgml
